# auto_confirmation_xbox

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
adapters/: base_adapter.py
entities/: access_response_entity.py
rabbit/: consumer.py  process_mq.py  send_result.py
