[project]
name = "auto-confirmation"
version = "0.1.0"
description = ""
authors = [
    {name = "Zavkal",email = "ivanovilya14122000@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "seleniumbase (>=4.38.0,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ruff (>=0.11.8,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
