[project]
name = "auto-confirmation"
version = "0.1.0"
description = "Xbox account auto-confirmation service"
authors = [
    {name = "Zavkal", email = "ivanovilya14122000@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.15.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pika>=1.3.2,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.8,<0.12.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapters", "entities", "rabbit"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "S104", "S108", "S110", "S112", "S311", "S701"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101", "S106", "S108"]